# d19

./: .gitattributes  .gitignore  1.json  README.md  ec_results.json  my_results.json  pyproject.toml  results.json  results_3v.json
.github/: copilot-instructions.md
docs/: CHAIN_FAST_BUCKET_STATS.md  CHAIN_FAST_SAFE_FILTERS.md  CHAIN_STRUCTURE_IDEAS.md  CURRENT_FINDINGS.md  DESIGN.md  DIRECTIONS.md  EXPLORATION_MAP.md  GLOSSARY.md  IMPLEMENTATION.md  MATH.md  MULTI_CONCORDANT_N_STRATEGY.md  MULTI_N_FILTER_LADDER.md  OPEN_DIRECTIONS.md  PARTNER_GRAPH_THEORY.md  PROJECT_STATUS.md  PROOF_STATUS_FAST_MODE.md  SEARCH_METHODS.md  THEORY_DIRECTIONS.md  THEORY_DIRECTIONS_ADVANCED.md
results/: README.md  chain.db  proof_status_10k.sqlite3  proof_status_multi_1m.db
scripts/: README.md  __init__.py  analyze_a2_pythagorean.py  analyze_chain_db.py  analyze_dual_ec_probe.py  analyze_ec_db.py  analyze_ell2cover.py  analyze_hypotenuse_identity.py  analyze_k2_closure_fiber.py  analyze_k2_f2_rank.py  analyze_k2_height_bound.py  analyze_k4_signatures.py  analyze_kn_f2_rank.py  analyze_multi_n_half_points.py  analyze_multi_n_mod_pattern.py  analyze_sha2_cases.py  audit_halfpoint_factorization.py  batch_ell2cover_hard_cases.py  batch_ell2cover_v2.py  batch_sha2_scan_v2.py  bench_mod_sieve.py  benchmark_ab_sieve_orders.py  benchmark_candidate_generators.py  benchmark_parallel_executor.py  build_results_catalog.py  classify_multi_n_by_f2_rank.py  comp0_analyze.py  compare_ellrank_effort.py  compare_parametric.py  cycle_ellrank.py  d_valuation_analysis.py  deep_rank_recheck.py  (+49 more)
(+493 files in other folders)
