[project]
name = "d19"
version = "0.1.0"
description = "Rational distance to vertices of a unit square"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "plotly>=6.7.0",
    "sympy>=1.14.0",
    "tqdm>=4.67.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
