[project]
name = "d19"
version = "0.1.0"
description = "Rational distance to vertices of a unit square"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "plotly>=6.7.0",
    "sympy>=1.14.0",
    "tqdm>=4.67.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "PIE", "RET", "RUF"]
ignore = ["RUF001", "RUF002"]

[tool.ruff.lint.per-file-ignores]
"scripts/visualize.py" = ["E501"]
"tests/test_all.py" = ["E402"]

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.12.0",
]
